fixed alignment of download area

--- a/css/style.css
+++ b/css/style.css
@@ -6710,7 +6710,7 @@ p {
 .section-download-app .download-text {
   color: #4a4a4a;
   font-weight: 700;
-  font-size: 1.01rem;
+  font-size: 0.9rem;
   padding-left: 0 !important;
   padding-right: 0 !important; }
 
